--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@
 #########
 #Simulation logic analyzer
 #########
-!*.wcfg
+
 !*.coe
 #########
 #MIG
@@ -57,7 +57,6 @@
 #Do NOT ignore *.xpr files
 !*.xpr
 #Include *.xml files for 2013.4 or earlier version
-!*.xml
 #########
 #Constraint files
 #########
@@ -74,7 +73,7 @@
 #########
 #Reports
 #########
-!*.rpt
+*.rpt
 *.txt
 !*.vdi
 #########
@@ -87,3 +86,8 @@
 !*.xmp
 glbl.v
 !*.dat
+*.dcp
+*sim_1
+*impl_1
+*synth_1
+*wt
